[package]
name = "tiago_functions"
version = "0.1.0"
edition = "2021"
authors = ["Tiago Santos Da Silva <tiago.toya@hotmail.com>"]
description = "Algumas funções para uso externo"
homepage = "https://github.com/tiago154/tiago_functions"
repository = "https://github.com/tiago154/tiago_functions"
documentation = "https://github.com/tiago154/tiago_functions"
license = "MIT"
keywords = ["functions", "helloworld"]

[dependencies]
regex = "1.10.3"
